RESOLVED FIXED204461
Ignore the requests to enter/exit video fullscreen/picture-in-picture if the requesting mode is the same as the current mode
https://bugs.webkit.org/show_bug.cgi?id=204461
Summary Ignore the requests to enter/exit video fullscreen/picture-in-picture if the ...
Peng Liu
Reported 2019-11-21 11:01:31 PST
AIgnore the requests to enter/exit video fullscreen/picture-in-picture if the requesting mode is the same as the current mode
Attachments
Patch (9.27 KB, patch)
2019-11-21 13:15 PST, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-21 11:02:37 PST
Peng Liu
Comment 2 2019-11-21 13:15:08 PST
WebKit Commit Bot
Comment 3 2019-11-21 16:32:52 PST
Comment on attachment 384084 [details] Patch Clearing flags on attachment: 384084 Committed r252755: <https://trac.webkit.org/changeset/252755>
WebKit Commit Bot
Comment 4 2019-11-21 16:32:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.