Ignore the requests to enter/exit video fullscreen/picture-in-picture if the requesting mode is the same as the current mode https://bugs.webkit.org/show_bug.cgi?id=204461

Patch by Peng Liu <peng.liu6@apple.com> on 2019-11-21
Reviewed by Jer Noble.

Source/WebCore:

Change the order of enum VideoPresentationMode and add some log messages regarding presentation mode change.
Those changes make the debugging easier.

Covered by existing test cases.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::enterFullscreen):
(WebCore::HTMLMediaElement::didBecomeFullscreenElement):
(WebCore::HTMLMediaElement::waitForPreparedForInlineThen):
(WebCore::HTMLMediaElement::setVideoFullscreenLayer):
* html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::webkitSetPresentationMode):
(WebCore::HTMLVideoElement::setFullscreenMode):
(WebCore::HTMLVideoElement::fullscreenModeChanged):
* html/HTMLVideoElement.h:
* html/HTMLVideoElement.idl:

Source/WebKit:

In enterVideoFullscreenForVideoElement() and exitVideoFullscreenForVideoElement(),
we can ignore the request if the targeting mode is the same as the current one.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::enterVideoFullscreenForVideoElement):
(WebKit::VideoFullscreenManager::exitVideoFullscreenForVideoElement):

Canonical link: https://commits.webkit.org/217735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252755 268f45cc-cd09-0410-ab3c-d52691b4dbfc